chore: more events & functions